--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "sass-loader": "^6.0.5",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
     "css-loader": "^0.28.4",
