--- a/package.json
+++ b/package.json
@@ -1,39 +1,17 @@
 {
   "name": "koskaret",
   "version": "1.0.0",
-  "description": "Portfolio page",
+  "description": "This project will be my portfolio page, wich I will host here.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack-dev-server",
-    "build:prod": "webpack -p"
-  },
-  "author": "Knut",
-  "license": "MIT",
-  "devDependencies": {
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "sass-loader": "^6.0.5",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.5.0"
-  },
-  "dependencies": {
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.5",
-    "webpack": "^2.6.1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/KOSkaret/KOSkaret.github.io.git"
   },
+  "author": "",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/KOSkaret/KOSkaret.github.io/issues"
   },
